Whatsapp visibility bug

--- a/public/app.css
+++ b/public/app.css
@@ -13,4 +13,10 @@ p {
     #whatsappshare {
         display: block;
     }
+
+    p {
+      font-size: 30px;
+      color: yellow;
+    }
+
 }
